hack/tools/kapinger/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapinger
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kapinger
  template:
    metadata:
      labels:
        app: kapinger
    spec:
      serviceAccountName: kapinger-sa
      nodeSelector:
        "kubernetes.io/os": linux
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - kapinger
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: kapinger
          image: ghcr.io/microsoft/retina/kapinger:latest
          resources:
            limits:
              memory: 20Mi
            requests:
              memory: 20Mi
          ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapinger-win
  namespace: default
spec:
  replicas: 5
  selector:
    matchLabels:
      app: kapinger
  template:
    metadata:
      labels:
        app: kapinger
    spec:
      serviceAccountName: kapinger-sa
      nodeSelector:
        "kubernetes.io/os": windows
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - kapinger
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: kapinger
          image: ghcr.io/microsoft/retina/kapinger:windows-ltsc2022-amd64-v35
          ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kapinger-drop
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kapinger-drop
  template:
    metadata:
      labels:
        app: kapinger-drop
    spec:
      serviceAccountName: kapinger-sa
      nodeSelector:
        "kubernetes.io/os": linux
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app"
                      operator: In
                      values:
                        - kapinger
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: kapinger
          image: ghcr.io/microsoft/retina/kapinger:latest
          resources:
            limits:
              memory: 20Mi
            requests:
              memory: 20Mi
          ports:
            - containerPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-traffic-to-kapinger-drop
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: kapinger-drop
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress: []
---
apiVersion: v1
kind: Service
metadata:
  name: kapinger-service
  namespace: default
  labels:
    app: kapinger
spec:
  selector:
    app: kapinger
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
